--- a/src/main/front/src/App.css
+++ b/src/main/front/src/App.css
@@ -32,7 +32,70 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.messageBox {
+  border: 1px solid #ededed;
+  border-radius: 12px;
+  display: block;
+  margin: 10px;
+  margin-right: 8px;
+  padding: 12px 0 12px 0;
+  width: 25%;
+  position: relative;
+  height: 100%;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.msgItem {
+  padding: 12px 16px;
+  display: block;
+  cursor: pointer;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0.05);
+  color: #666;
+  text-decoration: none;
+  letter-spacing: -0.5px;
+}
+
+.msgModal {
+  position: fixed;
+  z-index: 999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  opacity: .5;
+  filter: alpha(opacity=50);
+}
+
+.msgModalBox {
+  padding: 25px;
+  width: 400px;
+  box-sizing: border-box;
+  position: fixed;
+  z-index: 1000;
+  left: 50%;
+  top: 50%;
+  background-color: #fff;
+  margin-left: -200px;
+  margin-top: -107px;
+  display: block;
+}
+
+.message {
+  padding: 5px;
+  width: 100%;
+  height: 80px;
+  line-height: 20px;
+  border: 1px solid #e3e3e3;
+  box-sizing: border-box;
+  resize: none;
+  color: #292929;
+  font-size: 14px;
 }
