--- a/src/main/front/src/css/Section.css
+++ b/src/main/front/src/css/Section.css
@@ -60,10 +60,26 @@
     align-items: center;
     border-radius: 10%;
     font-weight: bold; 
-    margin-top: 30px;
+    margin-top: 25px;
     background-color: orange;
     border-radius: 10px;
+    margin-left: 10px;
+    padding: 3px;
     
+}
+
+  
+.article_box{
+    margin:10px 0px;
+    box-sizing: border-box;
+    border: 1px solid #EDEDED;
+    border-radius: 12px;
+    padding: 5px;
+}
+
+.article_box p {
+    padding: 2px;
+    margin: 0px;
 }
 
 
