--- a/src/main/front/src/css/Section.css
+++ b/src/main/front/src/css/Section.css
@@ -34,6 +34,11 @@
     text-decoration: none;
 }
 
+.section_menu a:hover{
+    text-decoration: none;
+    color: black;
+}
+
 .warning_box{
     min-width:400px;
     /* margin-left: 33%;
